# FMS

./: .gitignore  GWEMS.m  audio22kRef.mat  audio44kRef.mat  audio48kRef.mat  audioLong16kRef.mat  demo.m  readme.md
matlab/: FMS.m  GWEMS.m  demo.m  readme.md
matlab/reference_files/: audio22kRef.mat  audio32kRef.mat  audio44kRef.mat  audio48kRef.mat  audioLong16kRef.mat  audioShort16kRef.mat  readme.md
python/: README.md  demo.ipynb  environment.yml  fms.py  gwems.py  pyproject.toml
python/fms/: __init__.py  fms.py
python/reference_files/: audio22kRef.pkl  audio32kRef.pkl  audio44kRef.pkl  audio48kRef.pkl  audioLong16kRef.pkl  audioShort16kRef.pkl
python/tests/: test.py
reference_files/: audioShort16kRef.mat
wavs/: readme.md
